--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aurelia-syncfusion-bridge": "^1.0.0",
     "aurelia-ui-virtualization": "^1.0.0-beta.3.1.0",
     "aurelia-validation": "^1.1.1",
+    "babel-preset-env": "^1.6.0",
     "bluebird": "^3.5.0",
     "extend": "^3.0.1",
     "i18next": "^8.4.3",
@@ -49,7 +50,6 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-polyfill": "^6.9.1",
-    "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.9.0",
     "browser-sync": "^2.13.0",
